toy-c-compiler-master/src/test/resources/errors/const_init_non_const.tc
int main() {
    int x = 1;
    const int y = x;
    return y;
}
